# api/schemas/__init__.py
@@ -11,6 +11,7 @@ from .identity import (
     PasswordResetRequest,
     PasswordResetVerify,
     UserResponse,
+    UserUpdate,
     UserApiKeyResponse,
     UserApiKeyCreate,
     JWTToken,
@@ -25,6 +26,7 @@ __all__ = [
     "PasswordResetRequest",
     "PasswordResetVerify",
     "UserResponse",
+    "UserUpdate",
     "UserApiKeyResponse",
     "UserApiKeyCreate",
     "JWTToken",
